--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   material_design_icons_flutter: ^5.0.6595
   http: ^0.13.4
+  expansion_tile_card: ^2.0.0
 
 dev_dependencies:
   flutter_test:
