--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   material_design_icons_flutter: ^5.0.6595
   http: ^0.13.4
   expansion_tile_card: ^2.0.0
+  intl: ^0.17.0
+  flutter_slidable: ^1.3.0
 
 dev_dependencies:
   flutter_test:
