--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   expansion_tile_card: ^2.0.0
   intl: ^0.17.0
   flutter_slidable: ^1.3.0
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
