--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   flutter_slidable: ^1.3.0
   image_picker: ^0.8.5+3
   dropdown_button2: ^1.6.2
+  firebase_auth: ^3.4.2
+  firebase_core: ^1.19.2
+  cloud_firestore: ^3.3.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
