--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   firebase_core: ^1.19.2
   cloud_firestore: ^3.3.0
   shared_preferences: ^2.0.15
+  google_sign_in: ^5.4.0
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
